[gd_scene load_steps=52 format=2]

[ext_resource path="res://Enemy_Golem.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_000.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_002.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_003.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_004.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_005.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_006.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_007.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_008.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_009.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_010.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_011.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_012.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_013.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_014.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_015.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_016.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_017.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_018.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_019.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_020.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_021.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_022.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Earth/Walking/0_Golem_Walking_023.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_000.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_001.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_002.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_003.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_004.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_005.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_006.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_007.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_008.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_009.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_010.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_011.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_012.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_013.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_014.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_015.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_016.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_017.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_018.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_019.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_020.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_021.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_022.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Enemies/Golem/Golem_Wind/Walking/0_Golem_Walking_023.png" type="Texture" id=49]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "golem_earth",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "golem_wind",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 105.931
height = 99.0078

[node name="Enemy_Golem" type="RigidBody2D"]
position = Vector2( 103.484, 150.523 )
collision_layer = 0
gravity_scale = 0.0
script = ExtResource( 1 )
max_speed = 250
min_speed = 150

[node name="Sprite_Golem" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "golem_earth"

[node name="Visibility_Golem" type="VisibilityNotifier2D" parent="."]

[node name="Collision_Golem" type="CollisionShape2D" parent="."]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 2 )
[connection signal="screen_exited" from="Visibility_Golem" to="." method="_on_Visibility_Golem_screen_exited"]
